crates/jsonrpc/error/macro/tests/ui/serde_into.stderr
error: `#[serde(into)]` is not allowed at the struct level of an `#[rpc_error]` struct because it could change or replace the serialized shape. Allowed at this level: ["rename_all"]
 --> tests/ui/serde_into.rs:4:9
  |
4 | #[serde(into = "String")]
  |         ^^^^
